@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:text="Cadastro de Usuário"
+        android:text="Novo Usuário"
         android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/icon_cadastro"
@@ -24,8 +24,8 @@
     <ImageView
         android:layout_marginTop="40dp"
         android:id="@+id/icon_cadastro"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:src="@drawable/icon_login"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,13 +35,13 @@
         android:id="@+id/nome_cadastro"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/rounded_corner"
         android:hint="Nome Completo"
-        android:padding="20dp"
+        android:padding="12dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/icon_cadastro" />
@@ -53,10 +53,10 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/rounded_corner"
         android:hint="CPF/CNPJ"
-        android:padding="18dp"
+        android:padding="12dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nome_cadastro" />
@@ -69,29 +69,47 @@
         android:hint="Email"
         android:layout_marginTop="12dp"
         android:inputType="textEmailAddress"
-        android:padding="18dp"
+        android:padding="12dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/documento" />
 
     <EditText
-        android:id="@+id/senha_cadastro"
+        android:id="@+id/telefone"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_corner"
-        android:hint="Senha"
+        android:hint="Telefone"
         android:layout_marginTop="12dp"
-        android:inputType="textPassword"
-        android:padding="18dp"
+        android:inputType="textEmailAddress"
+        android:padding="12dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
+
+
+    <EditText
+        android:id="@+id/senha_cadastro"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/rounded_corner"
+        android:hint="Senha"
+        android:inputType="textPassword"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/telefone" />
 
     <Button
         android:id="@+id/botao_cadastrar"
@@ -99,14 +117,14 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:backgroundTint="@color/white"
-        android:padding="18dp"
+        android:padding="12dp"
         android:text="Cadastrar"
         android:textColor="#2F44D1"
-        android:textSize="25sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/senha_cadastro"
-        android:layout_marginBottom="25dp"/>
+        android:layout_marginBottom="5dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
